--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "time_counter",
+  "name": "pomodoro",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
-    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-modal": "^3.16.1",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.0",
-    "vazirmatn": "^33.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,11 +37,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.22.5",
-    "@testing-library/react": "^14.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "nodemon": "^2.0.22"
   }
 }
